syntax = "proto3";

package com.cgi.eoss.ftep;

option java_multiple_files = true;
option java_package = "com.cgi.eoss.ftep.rpc";
option java_outer_classname = "Messages";

message Service {
    string id = 1;
    string name = 2;
    string dockerImageTag = 3;
}

message Job {
    // A job's execution status.
    enum Status {
        // Status is not known. May be recoverable, or transition to FAILED or
        // CANCELLED.
        UNKNOWN = 0;
        // Job has passed validation and is accepted, but not yet scheduled for
        // execution.
        ACCEPTED = 1;
        // Job is scheduled for execution, but has not yet started.
        QUEUED = 2;
        // Job is currently executing.
        RUNNING = 3;
        // Job has successfully completed execution, and produced outputs according
        // to the workflow contract.
        COMPLETED = 4;
        // One of the steps in the job failed execution, or a step or the workflow
        // as a whole did not produce valid outputs per its contract.
        FAILED = 5;
        // Job was cancelled by user request.
        CANCELLED = 6;
    }

    string id = 1;
    int64 intJobId = 2;
    string userId = 3;
    string serviceId = 4;
}

message JobParam {
    string paramName = 1;
    repeated string paramValue = 2;
    bool searchParameter = 3;
    bool parallelParameter = 4;
}

message ShortFile {
    string filename = 1;
    bytes content = 2;
    bool executable = 3;
}

message FileStream {
    message FileMeta {
        string filename = 1;
        int64 size = 2;
    }
    message Chunk {
        int64 position = 1;
        bytes data = 2;
    }
    oneof Payload {
        FileMeta meta = 1;
        Chunk chunk = 2;
    }
}
